--- a/.github/workflows/deploy-publish.yml
+++ b/.github/workflows/deploy-publish.yml
@@ -12,20 +12,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup pnpm and install dependencies
-        uses: pnpm/action-setup@v2.2.4
+        uses: pnpm/action-setup@v4
         with:
           version: latest
           run_install: true
 
-      # - uses: actions/setup-node@v4
-      #   with:
-      #     node-version: 20
-      #     registry-url: https://registry.npmjs.org/
-      # - run: pnpm install
       - name: Compile
         run: pnpm compile
 
       - name: Publish
         run: pnpm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
