--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,13 @@
 		"moduleResolution": "NodeNext",
 		"outDir": "dist",
 		"rootDir": ".",
+		"sourceMap": false,
 		"target": "ES2022",
 	},
+	"include": ["index.ts"],
 	"exclude": [
 		"node_modules",
+		"example.ts",
 		"dist"
 	]
 }
