--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
 	"name": "@kalimahapps/cli-progress",
 	"description": "cli-progress wrapper with personal configuration",
 	"author": "khr2003",
-	"version": "1.0.3",
+	"version": "1.0.4",
 	"type": "module",
 	"license": "MIT",
 	"scripts": {
 		"compile": "tsc -p tsconfig.json --listEmittedFiles",
+		"prepublishOnly": "npm run compile",
 		"watch": "tsc -watch -p ./"
 	},
 	"dependencies": {
